Spacing and set page height to fixed 810px

--- a/projects/shoe-animation-layout/styles/modules/main-image.css
+++ b/projects/shoe-animation-layout/styles/modules/main-image.css
@@ -34,7 +34,7 @@
 }
 
 .beacon.two {
-  transform: translate(490%, -590%);
+  transform: translate(600%, -480%);
   position: absolute;
 }
 
