--- a/projects/shoe-animation-layout/styles/modules/shoe-detail.css
+++ b/projects/shoe-animation-layout/styles/modules/shoe-detail.css
@@ -3,7 +3,6 @@
 	border-bottom-right-radius: 0;
 	border-bottom-left-radius: 0;
 	padding: 25px 15px 10px 15px;
-	flex-grow: 1;
 	background-image: url('../../assets/shoe-detail-bg-short.svg');
 	background-size: cover;
 	background-position: center;
