--- a/projects/shoe-animation-layout/styles/modules/shoe-grid.css
+++ b/projects/shoe-animation-layout/styles/modules/shoe-grid.css
@@ -1,6 +1,6 @@
 .shoe-grid ul {
 	display: flex;
-	margin-top: 63px;
+	margin-top: 65px;
 }
 
 .shoe-card {
