--- a/projects/shoe-animation-layout/styles/structure.css
+++ b/projects/shoe-animation-layout/styles/structure.css
@@ -65,3 +65,7 @@ main .right-side {
 	display: grid;
 	grid-template-rows: 1fr auto 1fr;
 }
+
+main .right-side, main .left-side {
+	height: 810px;
+}
